force-app/main/default/objects/Exemption_Type_Link__c/Exemption_Type_Link__c.object-meta.xml
<CustomObject>
    <description>Junction Object for Exemptions and Exemption Types</description>
    <label>Child Exemption</label>
    <nameField>
        <label>Exemption Type Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exemption Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>