force-app/main/default/objects/Exemption_Type_Link__c/fields/Additional_End_Reason__c.field-meta.xml
<CustomField>
    <fullName>Additional_End_Reason__c</fullName>
    <label>Additional End Reason</label>
    <length>200</length>
    <type>Text</type>
</CustomField>