force-app/main/default/objects/Exemption_Type_Link__c/fields/Child_Exemption_Ref__c.field-meta.xml
<CustomField>
    <fullName>Child_Exemption_Ref__c</fullName>
    <formula>Exemption__r.Ref_Number__c + &quot;-&quot; +  Exemption_Type_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Exemption Ref</label>
    <type>Text</type>
</CustomField>