force-app/main/default/objects/Exemption_Type_Link__c/fields/End_Reason__c.field-meta.xml
<CustomField>
    <fullName>End_Reason__c</fullName>
    <label>End Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property is compliant – EPC E or higher</fullName>
            </value>
            <value>
                <fullName>Property has been sold / change of landlord</fullName>
            </value>
            <value>
                <fullName>Property is now short term let / holiday let</fullName>
            </value>
            <value>
                <fullName>Property is now Owner Occupier</fullName>
            </value>
            <value>
                <fullName>Property is empty</fullName>
            </value>
            <value>
                <fullName>Exemption no longer suitable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>