force-app/main/default/objects/Exemption_Type_Link__c/fields/Exemption__c.field-meta.xml
<CustomField>
    <fullName>Exemption__c</fullName>
    <label>Exemption</label>
    <referenceTo>Exemption__c</referenceTo>
    <relationshipName>ExemptionTypeLinks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>