force-app/main/default/objects/Exemption_Type_Link__c/fields/Exemption_Type__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exemption Type</label>
    <referenceTo>Exemption_Type__c</referenceTo>
    <relationshipLabel>Child Exemptions</relationshipLabel>
    <relationshipName>Exemption_Type_Links</relationshipName>
    <type>Lookup</type>
</CustomField>