force-app/main/default/objects/Exemption_Type_Link__c/fields/Exemption_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Type_Code__c</fullName>
    <formula>Exemption_Type__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exemption Type Code</label>
    <type>Text</type>
</CustomField>